--- a/MVC/CIPlatform/CIPlatform/Views/Home/Admin_user.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/Admin_user.cshtml
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Final landing page</title>
+    <title>Admin-User</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&display=swap" rel="stylesheet">
@@ -44,19 +44,19 @@
                 </a>
             </li>
             <li>
-                <a asp-action="CMSpage" asp-controller="Admin">
+                <a asp-action="CMSPage" asp-controller="Home">
                     <i class="fa-regular fa-file-lines" aria-hidden="true"></i>
                     <span class='sidebar-menu-text'>CMS Page</span>
                 </a>
             </li>
             <li>
-                <a asp-action="Missionpage" asp-controller="Admin">
+                <a asp-action="Admin_Mission" asp-controller="Home">
                     <i class="fa-solid fa-bullseye" aria-hidden="true"></i>
                     <span class='sidebar-menu-text'>Mission</span>
                 </a>
             </li>
             <li>
-                <a asp-action="MissionThemepage" asp-controller="Admin">
+                <a asp-action="Admin_MissionTheme" asp-controller="Home">
                     <i class="fa-solid fa-box" aria-hidden="true"></i>
                     <span class='sidebar-menu-text'>Mission Theme</span>
                 </a>
@@ -273,24 +273,45 @@
                             <td style="background-color:white">@user.FirstName</td>
                             <td style="background-color:white">@user.LastName</td>
                             <td>@user.Email</td>
-                            <td>125746</td>
+                            <td>@user.EmployeeId</td>
                             <td>@user.Department</td>
-                            <td>@user.Status</td>
+                            <td style="color: #14C506;">@user.Status</td>
                             <td>
 
-                                <i type="button" onclick="deleteuser(@user.UserId)" class="btn fa fa-trash" style="font-size:larger" aria-hidden="true"></i>
 
 
 
                     
 
                              <!-- Button trigger modal -->
-                    <button type="button"  class="btn fas fa-edit" style="color: #f88634; margin-left:10px; font-size:larger" id="UserEditByAdmin" onclick="editAdminUser(@user.UserId)">
+                    <button type="button"  class="btn fas fa-edit" style="color: #f88634; margin-left:10px; font-size:larger" id="UserEditByAdmin" onclick="editAdminUser(@user.UserId)" >
                         
                      
                     </button>
                  
                     
+
+                                <i type="button" onclick="deleteuser(@user.UserId)" class="btn fa fa-trash" style="font-size:larger" aria-hidden="true"></i>
+
+
+
+                            </td>
+
+                        </tr>
+                    }
+                }
+
+
+
+            </table>
+
+
+
+        </div>
+    </div>
+
+</div>
+
 
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModalUE" data-bs-backdrop="static" tabindex="-1" aria-labelledby="exampleModalLabelEdit" aria-hidden="true">
@@ -302,7 +323,7 @@
                                 </div>
                                     <div class="modal-body">
 
-
+                                   <input type="hidden" id="userid"/>
 
                                         <div>
 
@@ -365,9 +386,11 @@
                                         <br />
 
                                         <div>
-                                            <label for="empid" class="form-label">Employee ID</label>
-                                            <input id="empidEdit" type="number" class="form-control" placeholder="Enter user's Employee Id" value="">
-                                        </div>
+                                            <label asp-for="empidEdit" class="form-label">Employee ID</label>
+                                            <input asp-for="empidEdit" id="empidEdit" type="number" class="form-control" placeholder="Enter user's Employee Id" value="">
+                                            <span asp-validation-for="empidEdit" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
+                                        
+                                            </div>
                                         <br />
                                         <div>
                                             <label for="" class="form-label">Department</label>
@@ -385,7 +408,7 @@
 
                                         <div>
                                             <label asp-for="Status" for="Status" class="form-label">Status</label>
-                                            <input asp-for="Status" id="StatusEdit" type="number" class="form-control" placeholder="Enter user's status" value="">
+                                            <input asp-for="Status" id="StatusEdit" type="text" class="form-control" placeholder="Enter user's status" value="">
                                             <span asp-validation-for="Status" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
 
                                         </div>
@@ -394,30 +417,10 @@
                                
                                 <div class="modal-footer">
                                     <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
-                                    <button type="submit" class="btn save-btn" onclick="saveEditedData(@user.UserId)">Save</button>
+                                    <button type="submit" class="btn save-btn" onclick="saveEditedData()">Save</button>
                                 </div>
                             </div>
                         </div>
                     </div>
-
-
-
-                            </td>
-
-                        </tr>
-                    }
-                }
-
-
-
-            </table>
-
-
-        </div>
-    </div>
-
-</div>
-
-
 
 <script src="~/js/admin_user.js"></script>
