--- a/MVC/CIPlatform/CIPlatform/Views/Home/Admin_user.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/Admin_user.cshtml
@@ -1,33 +1,37 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+@{
+    Layout = null;
+}
 @model CIPlatform.Entities.Models.AdminUserVM
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Admin-User</title>
+    <title>User</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    @* <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>*@
-    @*
-        <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
-        <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>*@
-
-
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="~/css/admin_user.css" />
+    @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>*@
+    
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    @*<link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />*@
+
+    <link rel="stylesheet" href="~/css/admin_user.css" />
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+   
+
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />
 
 
+ 
 </head>
-
 
 
 <div class="wrapper">
@@ -126,8 +130,8 @@
             <h1>User</h1>
             <hr />
             <div class="firstrow">
-                <div class="col-6">
-                    <input placeholder="Search" type="search" class="searchbar" />
+                <div class="col-7">
+                    @*<input placeholder="Search" type="search" class="searchbar" />*@
 
                 </div>
                 <div class="col-6">
@@ -233,7 +237,7 @@
 
                                         <div>
                                             <label asp-for="Status" for="Status" class="form-label">Status</label>
-                                            <input asp-for="Status" id="Status" type="number" class="form-control" placeholder="Enter user's status" value="">
+                                            <input asp-for="Status" id="Status" type="text" class="form-control" placeholder="Enter user's status" value="">
                                             <span asp-validation-for="Status" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
 
                                         </div>
@@ -252,7 +256,7 @@
 
             </div>
 
-<br />
+            <br />
 
             <table style="background-color:white; width:100%;" id="table_id" class="display" data-order='[[ 1, "asc" ]]' data-page-length='25' d>
                 <thead>
@@ -270,26 +274,20 @@
                     foreach (var user in ViewBag.users)
                     {
                         <tr>
-                            <td style="background-color:white">@user.FirstName</td>
-                            <td style="background-color:white">@user.LastName</td>
-                            <td>@user.Email</td>
-                            <td>@user.EmployeeId</td>
-                            <td>@user.Department</td>
+                            <td >@user.FirstName</td>
+                            <td >@user.LastName</td>
+                            <td >@user.Email</td>
+                            <td >@user.EmployeeId</td>
+                            <td >@user.Department</td>
                             <td style="color: #14C506;">@user.Status</td>
-                            <td>
+                            <td >
+
+                               
+                                <!-- Button trigger modal -->
+                            <button type="button" class="btn fas fa-edit" style="color: #f88634; margin-left:10px; font-size:larger" id="UserEditByAdmin" onclick="editAdminUser(@user.UserId)">
+                                </button>
 
 
-
-
-                    
-
-                             <!-- Button trigger modal -->
-                    <button type="button"  class="btn fas fa-edit" style="color: #f88634; margin-left:10px; font-size:larger" id="UserEditByAdmin" onclick="editAdminUser(@user.UserId)" >
-                        
-                     
-                    </button>
-                 
-                    
 
                                 <i type="button" onclick="deleteuser(@user.UserId)" class="btn fa fa-trash" style="font-size:larger" aria-hidden="true"></i>
 
@@ -313,114 +311,111 @@
 </div>
 
 
-                    <!-- Modal -->
-                    <div class="modal fade" id="exampleModalUE" data-bs-backdrop="static" tabindex="-1" aria-labelledby="exampleModalLabelEdit" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered modal-lg">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabelEdit">User Details</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                    <div class="modal-body">
+<!-- Modal -->
+<div class="modal fade" id="exampleModalUE" data-bs-backdrop="static" tabindex="-1" aria-labelledby="exampleModalLabelEdit" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabelEdit">User Details</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
 
-                                   <input type="hidden" id="userid"/>
+            <div class="modal-body">
 
-                                        <div>
+                <input type="hidden" id="userid" />
 
-                                            <label asp-for="FirstName" class="form-label">First name</label>
-                                            <input asp-for="FirstName" id="FirstNameEdit" type="text" placeholder="Enter user's First Name" class="form-control">
-                                            <span asp-validation-for="FirstName" class="text-danger" style="font-size:12px;"></span>
+                <div>
 
+                    <label asp-for="FirstName" class="form-label">First name</label>
+                    <input asp-for="FirstName" id="FirstNameEdit" type="text" placeholder="Enter user's First Name" class="form-control">
+                    <span asp-validation-for="FirstName" class="text-danger" style="font-size:12px;"></span>
 
+                </div>
+                <br />
+                <div>
+                    <label asp-for="LastName" class="form-label">Last name</label>
+                    <input asp-for="LastName" id="LastNameEdit" type="text" placeholder="Enter user's Last Name" class="form-control">
+                    <span asp-validation-for="LastName" class="text-danger" style="font-size:12px;"></span>
+                </div>
+                <br />
 
+                <div>
+                    <label asp-for="Email" class="form-label">Email address</label>
+                    <input asp-for="Email" id="EmailEdit" type="email" class="form-control" placeholder="Enter user's Email address">
+                    <span asp-validation-for="Email" class="text-danger" style="font-size:12px;"></span>
+                </div>
 
+                <br />
 
-
-                                        </div>
-                                        <br />
-                                        <div>
-                                            <label asp-for="LastName" class="form-label">Last name</label>
-                                            <input asp-for="LastName" id="LastNameEdit" type="text" placeholder="Enter user's Last Name" class="form-control">
-                                            <span asp-validation-for="LastName" class="text-danger" style="font-size:12px;"></span>
-                                        </div>
-                                        <br />
-
-                                        <div>
-                                            <label asp-for="Email" class="form-label">Email address</label>
-                                            <input asp-for="Email" id="EmailEdit" type="email" class="form-control" placeholder="Enter user's Email address">
-                                            <span asp-validation-for="Email" class="text-danger" style="font-size:12px;"></span>
-                                        </div>
-
-                                        <br />
-
-                                        <div>
-                                            <label asp-for="Password" class="form-label">Password</label>
-                                            <input asp-for="Password" id="PasswordEdit" type="password" class="form-control" placeholder="Enter your Password">
-                                            <span asp-validation-for="Password" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
+                <div>
+                    <label asp-for="Password" class="form-label">Password</label>
+                    <input asp-for="Password" id="PasswordEdit" type="password" class="form-control" placeholder="Enter your Password">
+                    <span asp-validation-for="Password" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
 
 
-                                        </div>
+                </div>
 
-                                        <br />
+                <br />
 
-                                        <label class="form-label" for="customFile">Upload user avatar</label>
-                                        <input type="file" class="form-control" id="customFileEdit" />
+                <label class="form-label" for="customFile">Upload user avatar</label>
+                <input type="file" class="form-control" id="customFileEdit" />
 
-                                        <br />
+                <br />
 
-                                        <div>
-                                            <label asp-for="CityId" for="CityId" class="form-label">City ID</label>
-                                            <input asp-for="CityId" id="CityIdEdit" type="number" class="form-control" placeholder="Enter user's City Id" value="">
-                                            <span asp-validation-for="CityId" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
+                <div>
+                    <label asp-for="CityId" for="CityId" class="form-label">City ID</label>
+                    <input asp-for="CityId" id="CityIdEdit" type="number" class="form-control" placeholder="Enter user's City Id" value="">
+                    <span asp-validation-for="CityId" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
 
-                                        </div>
+                </div>
 
-                                        <br />
+                <br />
 
-                                        <div>
-                                            <label asp-for="CountryId" for="CountryId" class="form-label">Country ID</label>
-                                            <input asp-for="CountryId" id="CountryIdEdit" type="number" class="form-control" placeholder="Enter user's Country Id" value="">
-                                            <span asp-validation-for="CountryId" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
+                <div>
+                    <label asp-for="CountryId" for="CountryId" class="form-label">Country ID</label>
+                    <input asp-for="CountryId" id="CountryIdEdit" type="number" class="form-control" placeholder="Enter user's Country Id" value="">
+                    <span asp-validation-for="CountryId" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
 
-                                        </div>
-                                        <br />
+                </div>
+                <br />
 
-                                        <div>
-                                            <label asp-for="empidEdit" class="form-label">Employee ID</label>
-                                            <input asp-for="empidEdit" id="empidEdit" type="number" class="form-control" placeholder="Enter user's Employee Id" value="">
-                                            <span asp-validation-for="empidEdit" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
-                                        
-                                            </div>
-                                        <br />
-                                        <div>
-                                            <label for="" class="form-label">Department</label>
-                                            <input id="deptEdit" type="text" class="form-control" placeholder="Enter user's Department" value="">
-                                        </div>
+                <div>
+                    <label asp-for="empidEdit" class="form-label">Employee ID</label>
+                    <input asp-for="empidEdit" id="empidEdit" type="number" class="form-control" placeholder="Enter user's Employee Id" value="">
+                    <span asp-validation-for="empidEdit" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
 
-                                        <br />
-                                        <div>
-                                            <label for="profiletxt" class="form-label">Profile Text</label>
-                                            <input id="profiletxtEdit" type="text" class="form-control" placeholder="Enter user's Profile Text" value="">
-                                        </div>
+                </div>
+                <br />
+                <div>
+                    <label for="" class="form-label">Department</label>
+                    <input id="deptEdit" type="text" class="form-control" placeholder="Enter user's Department" value="">
+                </div>
 
-                                        <br />
+                <br />
+                <div>
+                    <label for="profiletxt" class="form-label">Profile Text</label>
+                    <input id="profiletxtEdit" type="text" class="form-control" placeholder="Enter user's Profile Text" value="">
+                </div>
+
+                <br />
 
 
-                                        <div>
-                                            <label asp-for="Status" for="Status" class="form-label">Status</label>
-                                            <input asp-for="Status" id="StatusEdit" type="text" class="form-control" placeholder="Enter user's status" value="">
-                                            <span asp-validation-for="Status" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
+                <div>
+                    <label asp-for="Status" for="Status" class="form-label">Status</label>
+                    <input asp-for="Status" id="StatusEdit" type="text" class="form-control" placeholder="Enter user's status" value="">
+                    <span asp-validation-for="Status" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
 
-                                        </div>
+                </div>
 
-                                    </div>
-                               
-                                <div class="modal-footer">
-                                    <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
-                                    <button type="submit" class="btn save-btn" onclick="saveEditedData()">Save</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+            </div>
 
+            <div class="modal-footer">
+                <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn save-btn" onclick="saveEditedData()">Save</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
 <script src="~/js/admin_user.js"></script>
