--- a/MVC/CIPlatform/CIPlatform/Views/Home/CMSPage.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/CMSPage.cshtml
@@ -1,6 +1,10 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+
+@{
+    Layout = null;
+}
 @model CIPlatform.Entities.Models.CMSPageVM
 <head>
     <meta charset="utf-8">
@@ -10,22 +14,24 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    @* <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>*@
-    @*
-        <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
-        <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>*@
-
-
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="~/css/admin_user.css" />
+    @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>*@
+    
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    @*<link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />*@
+
+    <link rel="stylesheet" href="~/css/admin_user.css" />
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+   
+
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />
 
 
+ 
 </head>
 
 
@@ -126,8 +132,8 @@
             <h1>CMS Page</h1>
             <hr />
             <div class="firstrow">
-                <div class="col-6">
-                    <input placeholder="Search" type="search" class="searchbar" />
+                <div class="col-7">
+                   
 
                 </div>
                 <div class="col-6">
@@ -204,7 +210,7 @@
             <table style="background-color:white; width:100%;" id="table_id" class="display" data-order='[[ 1, "asc" ]]' data-page-length='25' d>
                 <thead>
                     <tr>
-                        <th></th>
+                        
                         <th>Title</th>
                        <th>Status</th>
                        
@@ -219,11 +225,11 @@
                     foreach (var cms in ViewBag.cmsData)
                     {
                         <tr>
-                        <th></th>
+                        
                             <td style="background-color:white">@cms.Title</td>
                             <td style="background-color:white; color: #14C506;">@cms.Status</td>
                            
-                            <td>
+                            <td style="background-color:white">
 
 
                              <!-- Button trigger modal -->
@@ -315,4 +321,7 @@
                         </div>
                     </div>
 
+<script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
+
 <script src="~/js/cms.js"></script>
+
