--- a/MVC/CIPlatform/CIPlatform/Views/Home/CMSPage.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/CMSPage.cshtml
@@ -74,7 +74,7 @@
                 </a>
             </li>
             <li>
-                <a asp-action="MissionApplicationpage" asp-controller="Admin">
+                <a asp-action="Admin_MissionApp" asp-controller="Home">
                     <i class="fa-solid fa-folder-closed" aria-hidden="true"></i>
                     <span class='sidebar-menu-text'>Mission Application</span>
                 </a>
