--- a/MVC/CIPlatform/CIPlatform/Views/Home/EditProfile.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/EditProfile.cshtml
@@ -402,8 +402,8 @@
                                                         </div>
                                                         <div class="col-auto">
                                                             <div class="d-flex flex-column">
-                                                                <button id="btn-add" type="button" class="btn btn-primary mb-2">&gt;</button>
-                                                                <button id="btn-remove" type="button" class="btn btn-primary">&lt;</button>
+                                                                <button id="btn-add" style="background: #F88634 0% 0% no-repeat padding-box;border: 2px solid #F88634; color:white;" type="button" class="btn mb-2">&gt;</button>
+                                                                <button id="btn-remove" type="button" style="background: #F88634 0% 0% no-repeat padding-box;border: 2px solid #F88634; color:white;" class="btn">&lt;</button>
                                                             </div>
                                                         </div>
                                                         <div class="col">
