--- a/MVC/CIPlatform/CIPlatform/Views/Home/VolTimesheet.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/VolTimesheet.cshtml
@@ -273,8 +273,8 @@
                                                 <div class="col-1" style="margin-left:5%;">
 
                                                     <!-- Button trigger modal -->
-                                <button type="button" class="btn add-hours" data-bs-toggle="modal" data-bs-target="#exampleModalEdit">
-                                                        <img src="~/NewFolder/edit.png" class="edit-img" />
+                                <button type="button" class="add-hours fas fa-edit" style="border:none; font-size:22px;" data-bs-toggle="modal" data-bs-target="#exampleModalEdit">
+                                                       
                                                     </button>
 
 
@@ -389,8 +389,8 @@
                                                                         {
 
 
-                                                                            <button onclick="onremove(@removetimedata.t.MissionId)" type="button" style="border:none; background:none;">
-                                                                                <img src="~/NewFolder/bin.png" />
+                                                                            <button class="fa fa-trash" style="background:none; border:none; font-size:20px; margin-top:1%;" onclick="onremove(@removetimedata.t.MissionId)" type="button" style="border:none; background:none;">
+
                                                                             </button>
 
 
@@ -558,8 +558,8 @@
                                                 <div class="col-1" style="margin-left:5%;">
 
                                                     <!-- Button trigger modal -->
-                                <button type="button" class="btn add-hours" data-bs-toggle="modal" data-bs-target="#exampleModalEditGoal">
-                                                        <img src="~/NewFolder/edit.png" class="edit-img" />
+                                <button type="button" class="add-hours fas fa-edit" style="border:none; font-size:22px;" data-bs-toggle="modal" data-bs-target="#exampleModalEditGoal">
+                                                        
                                                     </button>
 
 
@@ -662,8 +662,8 @@
                                                                         {
 
 
-                                                                            <button onclick="onremovegoal(@removetimedata.t.MissionId)" type="button" style="border:none; background:none;">
-                                                                                <img src="~/NewFolder/bin.png" />
+                                                                            <button class="fa fa-trash" style="background:none; border:none; font-size:20px; margin-top:1%;" onclick="onremovegoal(@removetimedata.t.MissionId)" type="button" style="border:none; background:none;">
+                                                                                
                                                                             </button>
 
 
