--- a/MVC/CIPlatform/CIPlatform/wwwroot/css/editprofile.css
+++ b/MVC/CIPlatform/CIPlatform/wwwroot/css/editprofile.css
@@ -30,6 +30,7 @@
     .add-skills:hover {
         border: 2px solid #F88634;
         background-color: #F88634;
+        color:white;
     }
 
 .save-btn {
