--- a/MVC/CIPlatform/CIPlatform/wwwroot/css/platformlandingpage.css
+++ b/MVC/CIPlatform/CIPlatform/wwwroot/css/platformlandingpage.css
@@ -138,7 +138,20 @@
     
     
 }
-
+.declined {
+    background-color: red;
+    height: 30%;
+    width: 30%;
+    color: white;
+    border: 1px solid red;
+    border-top-right-radius: 21px;
+    border-bottom-right-radius: 21px;
+    width: 150px;
+    margin-top: -47%;
+    text-align: center;
+    margin-left: 0%;
+    opacity: 0.9;
+}
 .closed {
     background-color: darkorange;
     height: 40%;
